--- a/ToDoMVCApplication/Views/Home/_LoginPage.cshtml
+++ b/ToDoMVCApplication/Views/Home/_LoginPage.cshtml
@@ -1,9 +1,12 @@
 ﻿@model ToDoMVCApplication.Models.User
+<div style="padding:0px" class="jumbotron">
+    <h4>TO DO Application</h4>
+</div>
 <div class="container-fluid" id="main-container-login">
     <div class="row">
         <div class="col-sm-4">
             <h2>Sign In to your account</h2>
-           <form method="post" id="SignInForm">
+            <form method="post" id="SignInForm">
                 <div class="form-group">
                     <label for="email">Username:</label>
                     @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @id = "LoginUsername", @placeholder = "Enter Username", @name = "username" })
@@ -17,7 +20,7 @@
                     <label class="custom-control-label" for="customCheck">Custom checkbox</label>
                 </div>
                 <button type="submit" id="submitSignInForm" class="btn btn-primary">Submit</button>
-               </form>
+            </form>
         </div>
         <div class="col-sm-8">
 
@@ -42,7 +45,7 @@
                 <div class="form-group">
                     <button type="submit" id="submitSignUpForm" class="btn btn-primary">Submit</button>
                 </div>
-                </form>
+            </form>
         </div>
     </div>
 </div>
@@ -58,7 +61,6 @@
     $(document).ready(function () {
      $("#submitSignUpForm").click(function (e) {
          e.preventDefault();
-         debugger;
          var data = {
              'UserName': $('#UsernameTxt').val(),
              'Name': $('#NameTxt').val(),
@@ -79,7 +81,6 @@
     });
     $("#submitSignInForm").click(function (e) {
          e.preventDefault();
-         debugger;
          var data = {
              'UserName': $('#LoginUsername').val(),
              'Password': $('#LoginPassword').val()
@@ -90,7 +91,6 @@
             data: JSON.stringify(data),
             contentType: 'application/json; charset=utf-8',
             success: function (result) {
-                debugger;
                 if (result.result == false)
                     alert('Invalid Credentials');
                 else {
@@ -107,7 +107,7 @@
             data: JSON.stringify(data),
             contentType: 'application/json; charset=utf-8',
             dataType: "json",
-            
+
         });
     }
 
